--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,17 +2,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/home_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
 
     <TextView
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blue_base"
-        android:padding="10sp"
+        android:background="@color/primary_dark"
+        android:padding="10dp"
         android:text="Issue Tracker"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <FrameLayout
@@ -20,13 +21,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/textViewTitle"
-        android:layout_above="@id/bottom_navigation" />
+        android:layout_above="@id/bottom_navigation"
+        android:background="@color/background" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:background="@drawable/rounded_bottom_nav_bar"
         android:id="@+id/bottom_navigation"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/primary_dark"
         app:menu="@menu/bottom_nav_menu" />
 </RelativeLayout>
