--- a/app/src/main/res/layout/fragment_user_signin.xml
+++ b/app/src/main/res/layout/fragment_user_signin.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/blue_base"
+    android:background="@color/primary_dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <TextView
         android:layout_width="match_parent"
