--- a/app/src/main/res/layout/fragment_user_signup.xml
+++ b/app/src/main/res/layout/fragment_user_signup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/blue_base">
+    android:background="@color/primary_dark">
 
     <TextView
         android:layout_width="match_parent"
