--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="blue_base">#1475fc</color>
+
+ <!-- blue_base -->
+    <color name="primary_dark">#357ABD</color>
+    <color name="accent">#50E3C2</color>
+
+    <color name="background">#003368</color>
+    <color name="surface">#F5F7FA</color>
+
+    <color name="backgroundLight">#F5F7FA</color> <!-- Soft light gray -->
+    <color name="primary">#3F51B5</color> <!-- Indigo -->
+    <color name="primaryVariant">#303F9F</color>
+    <color name="white">#FFFFFF</color>
+    <color name="textPrimary">#212121</color>
+
+
+
+    <color name="backgroundDark">#121212</color>
+    <color name="textOnPrimary">#FFFFFF</color>
+
+
+    <color name="text_primary">#333333</color>
+    <color name="text_secondary">#777777</color>
+
+    <color name="status_open">#4CAF50</color>
+    <color name="status_closed">#F44336</color>
+
+    <color name="priority_high">#F39C12</color>
+    <color name="priority_low">#95A5A6</color>
+
 </resources>
