--- a/app/src/main/res/layout/fragment_issuedetailspage.xml
+++ b/app/src/main/res/layout/fragment_issuedetailspage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.NavFragments.issuedetailspageFragment">
+    tools:context=".ui.fragments.NavFragments.issuedetailspageFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
