--- a/app/src/main/res/layout/fragment_isuues.xml
+++ b/app/src/main/res/layout/fragment_isuues.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.NavFragments.IsuuesFragment"
+    tools:context=".ui.fragments.NavFragments.IsuuesFragment"
     android:background="@color/background">
 
     <LinearLayout
