--- a/app/src/main/res/layout/fragment_user_signin.xml
+++ b/app/src/main/res/layout/fragment_user_signin.xml
@@ -7,7 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,18 +53,32 @@
         app:layout_constraintTop_toBottomOf="@+id/loginEmail"
         android:hint="Enter your password"
         android:inputType="textPassword" />
-    <Button
+    <FrameLayout
+        android:id="@+id/buttonContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textStyle="bold"
-        android:id="@+id/loginButton"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/blue_base"
-        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
-        android:layout_margin="10sp"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/loginPassword">
 
-        />
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Login"
+            android:textStyle="bold"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/blue_base"
+            android:enabled="true" />
+
+        <ProgressBar
+            android:id="@+id/buttonLoader"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:indeterminate="true" />
+    </FrameLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:id="@+id/moveTosignUp"
@@ -74,6 +87,6 @@
         android:layout_margin="10sp"
         android:textColor="@color/white"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/loginButton"/>
+        app:layout_constraintTop_toBottomOf="@id/buttonContainer"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
