--- a/app/src/main/res/layout/fragment_user_signup.xml
+++ b/app/src/main/res/layout/fragment_user_signup.xml
@@ -35,7 +35,7 @@
         tools:layout_editor_absoluteX="58dp" />
 
     <EditText
-        android:id="@+id/signupPassword"
+        android:id="@+id/userName"
         android:layout_width="match_parent"
         android:background="@drawable/authentication_input_field"
         android:layout_height="wrap_content"
@@ -44,10 +44,10 @@
         android:padding="20sp"
         android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/signupEmail"
-        android:hint="Enter your password"
-        android:inputType="textPassword" />
+        android:hint="Enter your name"
+        android:inputType="text" />
     <EditText
-        android:id="@+id/confirnSignupPassword"
+        android:id="@+id/signupPassword"
         android:layout_width="match_parent"
         android:background="@drawable/authentication_input_field"
         android:layout_height="wrap_content"
@@ -55,21 +55,39 @@
         android:layout_margin="10sp"
         android:padding="20sp"
         android:textColor="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/signupPassword"
+        app:layout_constraintTop_toBottomOf="@+id/userName"
         android:hint="Enter your password"
         android:inputType="textPassword" />
-    <Button
+
+    <FrameLayout
+        android:id="@+id/buttonContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
-        android:textStyle="bold"
-        android:id="@+id/signupButton"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/blue_base"
-        app:layout_constraintTop_toBottomOf="@+id/confirnSignupPassword"
-        android:layout_margin="10sp"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/signupPassword">
 
-        />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sign Up"
+            android:textStyle="bold"
+            android:id="@+id/signupButton"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/blue_base"
+            app:layout_constraintTop_toBottomOf="@+id/signupPassword"
+            android:layout_margin="10sp"
+            android:enabled="true"
+            />
+
+        <ProgressBar
+            android:id="@+id/buttonLoader"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:indeterminate="true" />
+    </FrameLayout>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
